# cmake_test_cpp_console

./: CMakeLists.txt  CMakeSettings.json
CMake_test/: CMakeLists.txt  CMake_test.cpp  CMake_test.h
